--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
