--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=10.0.0",
+    "yarn": ">=1.17.3"
   }
 }
